--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="/js/custom.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -110,7 +112,8 @@
                             <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                  <button class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                  </button>
                                 </div>
                                 <div class="modal-body">
                                     <div class="youtube-btn">
