--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                     <input type="text" class="form-control" id="first-name" placeholder="John" required>
                                 </div>
 
-                                <div class="col-10 col-md-5">
+                                <div class="col-10 col-md-5 last-name">
                                     <label for="last-name" class="form-label">Last Name</label>
                                     <input type="text" class="form-control" id="last-name" placeholder="Doe" required>
                                 </div>
