--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     
 <head>
-    <title>Document</title>
+    <title>CASTRO</title>
     <link me-4 text-white fw-bold rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link me-4 text-white fw-bold rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <script src="https://use.fontawesome.com/7e50d7d663.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -138,7 +139,7 @@
         <div class="container-md">
             <div class="row justify-content-center">
                 <div class="col-12 text-center mb-5 border-0">
-                    <h3 class="fw-bold mb-0 mt-5">Trusted by companies like</h3>
+                    <h3 class="fw-bold mb-0 mt-5 my-trustee">Trusted by companies like</h3>
                     <div class="underline mt-2"></div>
                 </div>
             </div>
