--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link me-4 text-white fw-bold rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <script src="https://use.fontawesome.com/7e50d7d663.js"></script>
+    <script src="https://kit.fontawesome.com/1103189788.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -435,7 +436,7 @@
 
         <div class="container-md">
 
-            <p class="text-center display-3 fw-bold">FAQ</p>
+            <p class="text-center display-3 fw-bold faq">FAQ</p>
             <div class="underline mt-2 text-center"></div>
 
             <div class="text-center mb-5" id="frequent">frequently asked questions,get knowledge before hand</div>
