--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-md">
             <a class="navbar-brand logo text-white" href="#">CASTRO</a>
 
-            <button class="navbar-toggler border-1 border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-1 border-light" id="rotate" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
 
