--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             </div>
 
 
-            <div class="row mb-5 justify-content-center">
+            <div class="row mb-5 justify-content-center justify-content-md-start">
 
                 <div class="col-11 col-md-6 col-lg-4">
                     <div class="projects" id="shadow">
