--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                <a class="nav-link me-4 text-white fw-bold active" aria-current="page" href="#">Home</a>
+                <a class="nav-link me-4 text-white fw-bold active" aria-current="page" href="#home">Home</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link me-4 text-white fw-bold" href="#">Services</a>
+                <a class="nav-link me-4 text-white fw-bold" href="#services">Services</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link me-4 text-white fw-bold" href="#">Testionial</a>
+                <a class="nav-link me-4 text-white fw-bold" href="#testimonial">Testionial</a>
                 </li>
                 
                 <li class="nav-item">
-                <a class="nav-link me-4 text-white fw-bold" href="#">Faq</a>
+                <a class="nav-link me-4 text-white fw-bold" href="#faq">Faq</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link me-4 text-white fw-bold" href="#">Portfolio</a>
+                <a class="nav-link me-4 text-white fw-bold" href="#projects">Portfolio</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link me-2 text-white fw-bold" href="#">Contact</a>
+                <a class="nav-link me-2 text-white fw-bold" href="#contact">Contact</a>
                 </li>
                 
             </ul>
@@ -76,7 +76,7 @@
         <a href="#" class="top-btn"><i class="fa fa-arrow-up" id="top-btn" aria-hidden="true"></i></a>
     </div>
 
-    <section class="section1">
+    <section class="section1" id="home">
         <div class="container-md pb-5">
             <div class="row">
 
@@ -135,7 +135,7 @@
         </svg>
     </section>
 
-    <section class="section2 pb-5">
+    <section class="section2 pb-5" id="services">
 
         <div class="container-md">
             <div class="row justify-content-center">
@@ -307,7 +307,7 @@
     </section>
 
 
-    <section class="section3 carousel pd-5">
+    <section class="section3 carousel pd-5" id="testimonial">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L48,144C96,160,192,192,288,186.7C384,181,480,139,576,106.7C672,75,768,53,864,64C960,75,1056,117,1152,128C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 
         <div class="container-md">
@@ -432,7 +432,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L48,144C96,160,192,192,288,186.7C384,181,480,139,576,106.7C672,75,768,53,864,64C960,75,1056,117,1152,128C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
 
-    <section class="scetion4 mb-5">
+    <section class="scetion4 mb-5" id="faq">
 
         <div class="container-md">
 
@@ -514,7 +514,7 @@
 
 
 
-    <section class="section5 pb-5">
+    <section class="section5 pb-5" id="projects">
 
         <div class="container-md">
 
@@ -779,7 +779,7 @@
     </section>
 
 
-    <section class="section6 py-5">
+    <section class="section6 py-5" id="contact">
         <div class="container-md pb-4">
 
             <div class="text-center start fw-bold">Get Started</div>
