--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                         <div class="project-intro" id="show">
                             <div class="centered">
                                 <div class="h4">swap2naira</div>
-                                <div class="po-name">A Landing Page for Swap2naira Website</div>
+                                <div class="pro-name">A Landing Page for Swap2naira Website</div>
                                 <div class="link"><a href="https://swap2naira.netlify.app/" target="_blank">Visit Site</a></div>
                             </div>
                         </div>
@@ -570,7 +570,7 @@
                         <div class="project-intro" id="show">
                             <div class="centered">
                                 <div class="h4">Personal Potfolio</div>
-                                <div class="text-muted">A website used to test my skills</div>
+                                <div class="pro-name">A website used to test my skills</div>
                                 <div class="link"><a href="https://rileyport.netlify.app/" target="_blank">Visit Site</a></div>
                             </div>
                         </div>
@@ -585,7 +585,7 @@
                         <div class="project-intro" id="show">
                             <div class="centered">
                                 <div class="h4">AJIDEX</div>
-                                <div class="text-muted">A website used to test my skills</div>
+                                <div class="pro-name">A website used to test my skills</div>
                                 <div class="link"><a href="https://ajidex.netlify.app/" target="_blank">Visit Site</a></div>
                             </div>
                         </div>
