--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
     
 <head>
     <title>CASTRO</title>
-    <link me-4 text-white fw-bold rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link me-4 text-white fw-bold rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <script src="https://use.fontawesome.com/7e50d7d663.js"></script>
     <script src="https://kit.fontawesome.com/1103189788.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <script src="/js/custom.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -23,7 +21,7 @@
         <div class="container-md">
             <a class="navbar-brand logo text-white" href="#">CASTRO</a>
 
-            <button class="navbar-toggler border-1 border-light" id="rotate" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-1 border-light" class="rotate" id="rotate" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
 
@@ -993,7 +991,7 @@
 
             <div class="second-footer py-4">
                 <div class="text-center text-white py-4">
-                    <span class="text-muted">©Copyright 2022</span> AJIDEX Company <span class="text-muted">Created by</span> AJIDEX
+                    <span class="text-muted">©Copyright <span class="year">2022</span> </span> AJIDEX Company <span class="text-muted">Created by</span> AJIDEX
                 </div>
             </div>
 
@@ -1012,10 +1010,9 @@
 
     
 
-
+    <script src="/js/custom.js" type="text/javascript"></script>
     <script src="/js/jquery.js" type="text/javascript"></script>
     <script src="/js/popper.js" type="text/javascript"></script>
     <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/custom.js" type="text/javascript"></script>
 </body>
 </html>
